@@ -7,6 +7,8 @@ git-annex (4.20130522) UNRELEASED; urgency=low
   * XMPP: Send pings and use them to detect when contact with the server
     is lost.
   * hook special remote: Added combined hook program support.
+  * Android app: Avoid using hard links to app's lib directory, which
+    is sometimes on a different filesystem than the data directory.
 
  -- Joey Hess <joeyh@debian.org>  Tue, 21 May 2013 18:22:46 -0400
 
